fix #521: break layout on Firefox when expading extra data

--- a/client/assets/scss/components/_card.scss
+++ b/client/assets/scss/components/_card.scss
@@ -6,8 +6,6 @@
   margin-bottom: 50px;
 
   a.disabled {
-    //pointer-events: none;
-    //color: currentColor;
     cursor: not-allowed;
     opacity: 0.5;
   }
@@ -72,6 +70,7 @@
   }
 
   &__table {
+    table-layout: fixed;
     width: 100%;
 
     thead tr {
@@ -153,7 +152,7 @@
 
       tr {
         display: grid;
-        grid-template-columns: 30% auto;
+        grid-template-columns: 30% 70%;
         grid-gap: 15px;
         margin-bottom: 15px;
       }
@@ -175,7 +174,7 @@
     @include media-breakpoint-up(md) {
 
       tr {
-        grid-template-columns: 20% auto;
+        grid-template-columns: 20% 80%;
         margin-bottom: 30px;
       }
 
@@ -188,7 +187,7 @@
       width: 80%;
 
       tr {
-        grid-template-columns: 15% auto;
+        grid-template-columns: 15% 75%;
       }
     }
 
@@ -248,7 +247,7 @@
   .tomo-card__table tr {
 
     @include media-breakpoint-up(md) {
-      grid-template-columns: 30% auto;
+      grid-template-columns: 30% 70%;
 
       &.is-contract-message {
         grid-template-columns: 100%;
@@ -278,7 +277,7 @@
     border-bottom: 1px solid #dddddd;
 
     @include media-breakpoint-up(sm) {
-      grid-template-columns: 30% auto;
+      grid-template-columns: 30% 70%;
     }
   }
 
